--- a/ToolshopApp2/View/TaskWindow.xaml
+++ b/ToolshopApp2/View/TaskWindow.xaml
@@ -4,23 +4,26 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ToolshopApp2.View"
-        xmlns:UserControlers="clr-namespace:ToolshopApp2.View.UserControlers" x:Class="ToolshopApp2.View.TaskWindow"
+        xmlns:UserControlers="clr-namespace:ToolshopApp2.View.UserControlers" xmlns:TaskWindowControllers="clr-namespace:ToolshopApp2.View.UserControlers.TaskWindowControllers" x:Class="ToolshopApp2.View.TaskWindow"
         mc:Ignorable="d"
-        Name="_TaskWindow" Title="Task Window" Height="723.194" Width="1061" SizeToContent="WidthAndHeight">
+        x:Name="_TaskWindow" Title="Task Window" Height="800" Width="{Binding WindowWidtProperty, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" SizeToContent="WidthAndHeight" SizeChanged="_TaskWindow_SizeChanged">
     <Grid Background="Black" x:Name="_TaskWindowGrid">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="257*"/>
-            <ColumnDefinition Width="257*"/>
+            <ColumnDefinition x:Name="_ColumnFirst" Width="450*"/>
+            <ColumnDefinition x:Name="_ColumnSecond" Width="450*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="342*"/>
-            <RowDefinition Height="69*"/>
-            <RowDefinition Height="281*"/>
+            <RowDefinition x:Name="_RowFirst" Height="350*"/>
+            <RowDefinition x:Name="_RowSecond" Height="130"/>
+            <RowDefinition x:Name="_RowThird" Height="50"/>
+            <RowDefinition x:Name="_RowFourth" Height="150*"/>
         </Grid.RowDefinitions>
 
         <UserControlers:SimpleTaskUserControl x:Name="_SimpleTaskUserControl" Grid.Row ="0" Grid.Column="0" HorizontalAlignment="Stretch" Height="Auto" Width="Auto"/>
         <UserControlers:ShipmentTaskUserControl x:Name="_ShipmentTaskUserControl" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Stretch" Height="Auto" Width="Auto" />
-        <UserControlers:TaskControlersUserControl x:Name="_TaskControlersUserControl" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Stretch" Height="Auto" Width="Auto"/>
-        <UserControlers:ToolshopPartUserControl x:Name="_ToolshopPartUserControl" Grid.Row="2" Grid.Column="0" HorizontalAlignment="Stretch" Height="Auto" Width="Auto" />
+        <TaskWindowControllers:CommentsUserControl x:Name="_CommentPartUserControl" Grid.Row="1" Grid.Column="0" HorizontalAlignment="Stretch" Height="Auto" Width="Auto" Margin="10"/>
+        <UserControlers:TaskControlersUserControl x:Name="_TaskControlersUserControl" Grid.Row="2" Grid.Column="0" HorizontalAlignment="Stretch" Height="Auto" Width="Auto"/>
+        <UserControlers:ToolshopPartUserControl x:Name="_ToolshopPartUserControl" Grid.Row="3" Grid.Column="0" HorizontalAlignment="Stretch" Height="Auto" Width="Auto" />
+
     </Grid>
 </Window>
