--- a/ToolshopApp2/View/UserControlers/MainWindowControllers/CalendarViewUserControl.xaml
+++ b/ToolshopApp2/View/UserControlers/MainWindowControllers/CalendarViewUserControl.xaml
@@ -25,7 +25,7 @@
         <Button x:Name="_Button_Refresh_Callendar" Content="Refresh" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Height="33" Grid.Column="1" Margin="78,0,0,0" />
 
         <DataGrid x:Name="_DataGridMonday" Margin="0,28,0,0" CanUserAddRows="False" Background="#FF3A3A3A" MouseDoubleClick="_DataGridAllRequestsMouseDoubleClick" AutoGenerateColumns="False" Grid.Row="1">
-            <!--<DataGrid.RowStyle>
+            <DataGrid.RowStyle>
                 <Style TargetType="DataGridRow">
                     <Style.Triggers>
                         <DataTrigger  Binding="{Binding Status}" Value="Accepted">
@@ -36,7 +36,7 @@
                         </DataTrigger>
                     </Style.Triggers>
                 </Style>
-            </DataGrid.RowStyle>-->
+            </DataGrid.RowStyle>
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Id" Binding="{Binding Path=Id}" IsReadOnly="True"/>
                 <DataGridTextColumn Header="User" Binding="{Binding Path=User}" IsReadOnly="True"/>
