--- a/ToolshopApp2/View/UserControlers/MainWindowControllers/CalendarViewUserControl.xaml
+++ b/ToolshopApp2/View/UserControlers/MainWindowControllers/CalendarViewUserControl.xaml
@@ -22,14 +22,14 @@
         <Button x:Name="_Button_wk_up" Content="+" HorizontalAlignment="Left" Margin="160,0,0,0" VerticalAlignment="Top" Width="40" Height="33" Click="_Button_wk_up_Click" />
         <Button x:Name="_Button_bt_actual_wk" Content="Current week" HorizontalAlignment="Left" VerticalAlignment="Top" Width="78" Height="33" Grid.Column="1" Click="_Button_bt_actual_wk_Click" />
         <TextBox x:Name="_Textbox_Year_Selected" HorizontalAlignment="Left" Height="33" Margin="91,0,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="69" FontSize="20" MaxLines="1" MaxLength="4" IsEnabled="False" />
-        <Button x:Name="_Button_Refresh_Callendar" Content="Refresh" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Height="33" Grid.Column="1" Margin="78,0,0,0" />
+        <Button x:Name="_Button_Refresh_Callendar" Click="_Button_Refresh_Callendar_Click" Content="Refresh" HorizontalAlignment="Left" VerticalAlignment="Top" Width="75" Height="33" Grid.Column="1" Margin="78,0,0,0" />
 
         <DataGrid x:Name="_DataGridMonday" Margin="0,28,0,0" CanUserAddRows="False" Background="#FF3A3A3A" MouseDoubleClick="_DataGridAllRequestsMouseDoubleClick" AutoGenerateColumns="False" Grid.Row="1">
             <DataGrid.RowStyle>
                 <Style TargetType="DataGridRow">
                     <Style.Triggers>
                         <DataTrigger  Binding="{Binding Status}" Value="Accepted">
-                            <Setter Property="Background" Value="Orange"/>
+                            <Setter Property="Background" Value="Gold"/>
                         </DataTrigger>
                         <DataTrigger Binding="{Binding Status}" Value="Closed">
                             <Setter Property="Background" Value="LightGreen"/>
@@ -42,7 +42,14 @@
                 <DataGridTextColumn Header="User" Binding="{Binding Path=User}" IsReadOnly="True"/>
                 <DataGridTextColumn Header="Status" Binding="{Binding Path=Status}" IsReadOnly="True"/>
                 <DataGridTextColumn Header="Project" Binding="{Binding Path=Project}" IsReadOnly="True"/>
-                <DataGridTextColumn Header="Description" Binding="{Binding Path=Description}" IsReadOnly="True" />
+                <DataGridTextColumn Header="Description" Binding="{Binding Path=Description}" IsReadOnly="True">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="{x:Type TextBlock}">
+                            <Setter Property="MaxHeight" Value="100" />
+                            <Setter Property="TextWrapping" Value="Wrap"/>
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
                 <DataGridTextColumn Header="Deadline" Binding="{Binding Path=Date, StringFormat=d}" IsReadOnly="True"/>
                 <DataGridTextColumn Header="Created" Binding="{Binding Path=CreationTime, StringFormat=d}" IsReadOnly="True"/>
             </DataGrid.Columns>
@@ -52,7 +59,7 @@
                 <Style TargetType="DataGridRow">
                     <Style.Triggers>
                         <DataTrigger  Binding="{Binding Status}" Value="Accepted">
-                            <Setter Property="Background" Value="Orange"/>
+                            <Setter Property="Background" Value="Gold"/>
                         </DataTrigger>
                         <DataTrigger Binding="{Binding Status}" Value="Closed">
                             <Setter Property="Background" Value="LightGreen"/>
@@ -65,7 +72,14 @@
                 <DataGridTextColumn Header="User" Binding="{Binding Path=User}" IsReadOnly="True"/>
                 <DataGridTextColumn Header="Status" Binding="{Binding Path=Status}" IsReadOnly="True"/>
                 <DataGridTextColumn Header="Project" Binding="{Binding Path=Project}" IsReadOnly="True"/>
-                <DataGridTextColumn Header="Description" Binding="{Binding Path=Description}" IsReadOnly="True"/>
+                <DataGridTextColumn Header="Description" Binding="{Binding Path=Description}" IsReadOnly="True">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="{x:Type TextBlock}">
+                            <Setter Property="MaxHeight" Value="100" />
+                            <Setter Property="TextWrapping" Value="Wrap"/>
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
                 <DataGridTextColumn Header="Deadline" Binding="{Binding Path=Date, StringFormat=d}" IsReadOnly="True"/>
                 <DataGridTextColumn Header="Created" Binding="{Binding Path=CreationTime, StringFormat=d}" IsReadOnly="True"/>
             </DataGrid.Columns>
@@ -75,7 +89,7 @@
                 <Style TargetType="DataGridRow">
                     <Style.Triggers>
                         <DataTrigger  Binding="{Binding Status}" Value="Accepted">
-                            <Setter Property="Background" Value="Orange"/>
+                            <Setter Property="Background" Value="Gold"/>
                         </DataTrigger>
                         <DataTrigger Binding="{Binding Status}" Value="Closed">
                             <Setter Property="Background" Value="LightGreen"/>
@@ -88,7 +102,14 @@
                 <DataGridTextColumn Header="User" Binding="{Binding Path=User}" IsReadOnly="True"/>
                 <DataGridTextColumn Header="Status" Binding="{Binding Path=Status}" IsReadOnly="True"/>
                 <DataGridTextColumn Header="Project" Binding="{Binding Path=Project}" IsReadOnly="True"/>
-                <DataGridTextColumn Header="Description" Binding="{Binding Path=Description}" IsReadOnly="True"/>
+                <DataGridTextColumn Header="Description" Binding="{Binding Path=Description}" IsReadOnly="True">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="{x:Type TextBlock}">
+                            <Setter Property="MaxHeight" Value="100" />
+                            <Setter Property="TextWrapping" Value="Wrap"/>
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
                 <DataGridTextColumn Header="Deadline" Binding="{Binding Path=Date, StringFormat=d}" IsReadOnly="True"/>
                 <DataGridTextColumn Header="Created" Binding="{Binding Path=CreationTime, StringFormat=d}" IsReadOnly="True"/>
             </DataGrid.Columns>
@@ -98,7 +119,7 @@
                 <Style TargetType="DataGridRow">
                     <Style.Triggers>
                         <DataTrigger  Binding="{Binding Status}" Value="Accepted">
-                            <Setter Property="Background" Value="Orange"/>
+                            <Setter Property="Background" Value="Gold"/>
                         </DataTrigger>
                         <DataTrigger Binding="{Binding Status}" Value="Closed">
                             <Setter Property="Background" Value="LightGreen"/>
@@ -111,7 +132,14 @@
                 <DataGridTextColumn Header="User" Binding="{Binding Path=User}" IsReadOnly="True"/>
                 <DataGridTextColumn Header="Status" Binding="{Binding Path=Status}" IsReadOnly="True"/>
                 <DataGridTextColumn Header="Project" Binding="{Binding Path=Project}" IsReadOnly="True"/>
-                <DataGridTextColumn Header="Description" Binding="{Binding Path=Description}" IsReadOnly="True"/>
+                <DataGridTextColumn Header="Description" Binding="{Binding Path=Description}" IsReadOnly="True">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="{x:Type TextBlock}">
+                            <Setter Property="MaxHeight" Value="100" />
+                            <Setter Property="TextWrapping" Value="Wrap"/>
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
                 <DataGridTextColumn Header="Deadline" Binding="{Binding Path=Date, StringFormat=d}" IsReadOnly="True"/>
                 <DataGridTextColumn Header="Created" Binding="{Binding Path=CreationTime, StringFormat=d}" IsReadOnly="True"/>
             </DataGrid.Columns>
@@ -121,7 +149,7 @@
                 <Style TargetType="DataGridRow">
                     <Style.Triggers>
                         <DataTrigger  Binding="{Binding Status}" Value="Accepted">
-                            <Setter Property="Background" Value="Orange"/>
+                            <Setter Property="Background" Value="Gold"/>
                         </DataTrigger>
                         <DataTrigger Binding="{Binding Status}" Value="Closed">
                             <Setter Property="Background" Value="LightGreen"/>
@@ -134,7 +162,14 @@
                 <DataGridTextColumn Header="User" Binding="{Binding Path=User}" IsReadOnly="True"/>
                 <DataGridTextColumn Header="Status" Binding="{Binding Path=Status}" IsReadOnly="True"/>
                 <DataGridTextColumn Header="Project" Binding="{Binding Path=Project}" IsReadOnly="True"/>
-                <DataGridTextColumn Header="Description" Binding="{Binding Path=Description}" IsReadOnly="True"/>
+                <DataGridTextColumn Header="Description" Binding="{Binding Path=Description}" IsReadOnly="True">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="{x:Type TextBlock}">
+                            <Setter Property="MaxHeight" Value="100" />
+                            <Setter Property="TextWrapping" Value="Wrap"/>
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
                 <DataGridTextColumn Header="Deadline" Binding="{Binding Path=Date, StringFormat=d}" IsReadOnly="True"/>
                 <DataGridTextColumn Header="Created" Binding="{Binding Path=CreationTime, StringFormat=d}" IsReadOnly="True"/>
             </DataGrid.Columns>
