--- a/ToolshopApp2/App.xaml
+++ b/ToolshopApp2/App.xaml
@@ -3,6 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:ToolshopApp2"
              StartupUri="View/MainWindow.xaml">
+    
+    <!--StartupUri="View/MainWindow.xaml"-->
+    
     <Application.Resources>
          
     </Application.Resources>
