--- a/ToolshopApp2/View/UserControlers/MainWindowControllers/AdministratorDataViewUserControl.xaml
+++ b/ToolshopApp2/View/UserControlers/MainWindowControllers/AdministratorDataViewUserControl.xaml
@@ -13,6 +13,6 @@
         </Grid.RowDefinitions>
         <Button x:Name="_ButtonShowUsers" Click="_ButtonShowUsersClick" Content="Show Users" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="75" />
         <Button x:Name="_ButtonShowProject" Click="_ButtonShowProjectClick"  Content="Show Project" HorizontalAlignment="Left" Margin="90,10,0,0" VerticalAlignment="Top" Width="75"/>
-        <DataGrid x:Name="_DataGridDatabaseView" Grid.Row="1" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" />
+        <DataGrid x:Name="_DataGridDatabaseView" Grid.Row="1" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" CellEditEnding="_DataGridDatabaseView_CellEditEnding" />
     </Grid>
 </UserControl>
